# starknet-docs

./: .eslintignore  .gitattributes  .gitignore  .htaccess  .prettierignore  .prettierrc.json  CHANGELOG.md  CODEOWNERS  LLMS_STRATEGY_APR2026.md  README.adoc  README.md  _typos.toml  antora.yml  build_local_site.sh  crowdin.yml  docs.json  docusaurus.config.js  index.mdx  linked-worktree-as-content-source.js  llms.txt  lunr-tokenizer.js  package-lock.json  package.json  playbook.yml  search-index.js  server.sh  sitemap.xml  webhook-fork-pr-test
.github/: PULL_REQUEST_TEMPLATE.md
CI/: Jenkinsfile  gh-pages-cleaner.Jenkinsfile
contributing_to_docs/: contributing.adoc  doc_guidelines.adoc  setting_up_environment.adoc  starknet_docs_style_guide.adoc
docs/: intro.md
documentation/: index.html
js/: .env  algolia-index.js
learn/: intro.mdx
learn/S-two-book/stwo-examples/: Cargo.toml  index.mdx  rust-toolchain.toml
learn/S-two-book/stwo-examples/.cargo/: config.toml
learn/S-two-book/stwo-examples/examples/: committing_to_the_trace_polynomials.rs  components.rs  constraints_over_trace_polynomials.rs  dynamic_lookups.rs  from_spreadsheet_to_trace_polynomials.rs  local_row_constraints.rs  local_row_constraints_fails_1.rs  local_row_constraints_fails_2.rs  preprocessed_trace.rs  proving_an_air.rs  public_input.rs  static_lookups.rs  writing_a_spreadsheet.rs
pr-/: search-index.js  sitemap.xml
pr-100/: 404.html  search-index.js  sitemap.xml
pr-1001/: search-index.js  sitemap.xml
pr-1002/: search-index.js  sitemap.xml
pr-1003/: search-index.js  sitemap.xml
(+19887 files in other folders)
